refactor(dek): migrate encryption key references from UUIDs to nicknames
- DEK encryption and key storage logic no longer rely on UUID-based identification.
- Replaced UUID key references in `AgentConfig`, `DEKDTO`, and `EncryptedKeyEntity` with nickname-based access.
- Introduced `DEKRequestDTO` and `DEKResponseDTO` to clearly separate DEK request and response types.
- Deprecated and removed fields in DTOs and database entities related to encryptor ID.
- Updated serialization logic and header metadata to support nickname instead of key ID.
- Simplified DEK transmission and reception by removing unused `KeyStorageEntity encryptor` references.
- Refactored test cases to align with new nickname-driven key management.