@@ -3,11 +3,13 @@ package net.result.sandnode.chain.receiver;
 import net.result.sandnode.chain.ReceiverChain;
 import net.result.sandnode.chain.ServerChain;
 import net.result.sandnode.db.*;
-import net.result.sandnode.dto.DEKDTO;
+import net.result.sandnode.dto.DEKRequestDTO;
+import net.result.sandnode.dto.DEKResponseDTO;
 import net.result.sandnode.exception.DatabaseException;
 import net.result.sandnode.exception.SandnodeException;
 import net.result.sandnode.exception.error.AddressedMemberNotFoundException;
 import net.result.sandnode.exception.error.NotFoundException;
+import net.result.sandnode.exception.error.TooFewArgumentsException;
 import net.result.sandnode.exception.error.UnauthorizedException;
 import net.result.sandnode.message.Message;
 import net.result.sandnode.message.RawMessage;
@@ -20,8 +22,7 @@ import net.result.sandnode.serverclient.Session;
 import net.result.sandnode.util.JPAUtil;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class DEKServerChain extends ServerChain implements ReceiverChain {
     public DEKServerChain(Session session) {
@@ -32,50 +33,51 @@ public class DEKServerChain extends ServerChain implements ReceiverChain {
     public Message handle(RawMessage raw) throws Exception {
         if (session.member == null) throw new UnauthorizedException();
 
-        DEKRequest request = new DEKRequest(raw);
-        DEKRequest.DataType type = request.type();
-        DEKDTO dto = request.dto();
+        var request = new DEKRequest(raw);
+        var dto = request.dto();
 
-        return switch (type) {
-            case SEND -> send(dto);
-            case GET -> get(session.member);
-            case GET_PERSONAL_KEY_OF -> getOf(dto);
-        };
+        if (dto.send != null) {
+            return send(session.member, dto.send);
+        } else if (dto.get) {
+            return get(session.member);
+        } else if (dto.getOf != null) {
+            return getOf(session.member, dto);
+        }
+
+        throw new TooFewArgumentsException();
     }
 
-    private @NotNull UUIDMessage send(DEKDTO dto) throws NotFoundException, DatabaseException {
-        MemberRepository memberRepo = session.server.container.get(MemberRepository.class);
-        EncryptedKeyRepository encryptedKeyRepo = session.server.container.get(EncryptedKeyRepository.class);
-        KeyStorageRepository keyStorageRepo = session.server.container.get(KeyStorageRepository.class);
+    private @NotNull UUIDMessage send(MemberEntity you, DEKRequestDTO.Send sendDTO) throws NotFoundException, DatabaseException {
+        var memberRepo = session.server.container.get(MemberRepository.class);
+        var encryptedKeyRepo = session.server.container.get(EncryptedKeyRepository.class);
 
-
-        MemberEntity receiver = memberRepo
-                .findByNickname(dto.receiverNickname)
+        var receiver = memberRepo
+                .findByNickname(sendDTO.receiverNickname)
                 .orElseThrow(NotFoundException::new);
 
-        KeyStorageEntity encryptor = keyStorageRepo
-                .find(dto.encryptorID)
-                .orElseThrow(NotFoundException::new);
-
-        EncryptedKeyEntity entity = encryptedKeyRepo.create(session.member, receiver, encryptor, dto.encryptedKey);
+        var entity = encryptedKeyRepo.create(you, receiver, sendDTO.encryptedKey);
 
         return new UUIDMessage(new Headers(), entity);
     }
 
-    private @NotNull DEKListMessage get(MemberEntity member) {
+    private @NotNull DEKListMessage get(MemberEntity you) {
         JPAUtil jpaUtil = session.server.container.get(JPAUtil.class);
 
-        session.member = jpaUtil.refresh(member);
-        List<DEKDTO> list = session.member.encryptedKeys().stream().map(DEKDTO::new).toList();
-        return new DEKListMessage(list);
+        session.member = jpaUtil.refresh(you);
+        var list = session.member
+                .encryptedKeys().stream()
+                .map(DEKResponseDTO::new)
+                .collect(Collectors.toList());
+        return new DEKListMessage((list));
     }
 
-    private @NotNull PublicKeyResponse getOf(DEKDTO dto) throws SandnodeException {
+    private @NotNull PublicKeyResponse getOf(MemberEntity you, DEKRequestDTO dto) throws SandnodeException {
         MemberRepository memberRepo = session.server.container.get(MemberRepository.class);
 
-        Optional<KeyStorageEntity> opt = memberRepo.findPersonalKeyByNickname(dto.receiverNickname);
-        KeyStorageEntity entity = opt.orElseThrow(AddressedMemberNotFoundException::new);
+        var entity = memberRepo
+                .findPersonalKeyByNickname(dto.getOf)
+                .orElseThrow(AddressedMemberNotFoundException::new);
 
-        return PublicKeyResponse.fromEntity(entity);
+        return PublicKeyResponse.fromEntity(you.nickname(), entity);
     }
 }
